@@ -2,7 +2,7 @@
 # c-ares Makefile for djgpp/gcc/Watt-32.
 #   By Gisle Vanem <giva@bgnett.no> 2004.
 #
-# $Id: Makefile.dj,v 1.21 2008-07-17 03:07:54 yangtse Exp $
+# $Id: Makefile.dj,v 1.22 2008-07-21 00:36:55 yangtse Exp $
 
 TOPDIR = ..
 
@@ -27,7 +27,8 @@ CFLAGS += -DWATT32 -DHAVE_AF_INET6 -DHAVE_PF_INET6 -DHAVE_IOCTLSOCKET \
           -DRECVFROM_TYPE_ARG1='int' -DRECVFROM_TYPE_ARG2='void' \
           -DRECVFROM_TYPE_ARG3='int' -DRECVFROM_TYPE_ARG4='int' \
           -DRECVFROM_TYPE_ARG6='int' -DRECVFROM_TYPE_RETV='int' \
-          -DRECVFROM_TYPE_ARG5='struct sockaddr' -DHAVE_RECVFROM
+          -DRECVFROM_TYPE_ARG5='struct sockaddr' -DHAVE_RECVFROM \
+          -DRECVFROM_TYPE_ARG2_IS_VOID
 
 LDFLAGS = -s
 
