@@ -1,5 +1,5 @@
 #################################################################
-# $Id: Makefile.netware,v 1.44 2008-07-17 03:07:54 yangtse Exp $
+# $Id: Makefile.netware,v 1.45 2008-07-21 00:36:55 yangtse Exp $
 #
 ## Makefile for building libcares (NetWare version - gnu make)
 ## Use: make -f Makefile.netware
@@ -338,6 +338,7 @@ else
 	@echo $(DL)#define RECVFROM_TYPE_ARG5 struct sockaddr$(DL) >> $@
 	@echo $(DL)#define RECVFROM_TYPE_ARG6 int$(DL) >> $@
 	@echo $(DL)#define RECVFROM_TYPE_RETV ssize_t$(DL) >> $@
+	@echo $(DL)#define RECVFROM_TYPE_ARG2_IS_VOID 1$(DL) >> $@
 	@echo $(DL)#define SEND_QUAL_ARG2$(DL) >> $@
 	@echo $(DL)#define SEND_TYPE_ARG1 int$(DL) >> $@
 	@echo $(DL)#define SEND_TYPE_ARG2 void *$(DL) >> $@
